manifests/blue-green/hello-world-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-ns
  labels:
    name: hello-world-ns
    environment: production
