manifests/blue-green/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-world-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"http":"HTTP","https":"HTTPS"}'
    cloud.google.com/backend-config: '{"default":"hello-world-backend-config"}'
    blue-green/active-version: blue
spec:
  selector:
    app: hello-world
    version: blue # Switch between 'blue' and 'green'
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
